--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/portfolio/portfolio-1.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-1.webp" class="img-fluid" alt="" loading="lazy"/>
                 <div class="portfolio-links">
                   <a
                     href="assets/portfolio/portfolio-1.webp"
@@ -513,7 +513,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/portfolio/portfolio-2.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-2.webp" class="img-fluid" alt="" loading="lazy"/>
                 <div class="portfolio-links">
                   <a
                     href="assets/portfolio/portfolio-2.webp"
@@ -552,7 +552,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
-                <img src="assets/portfolio/portfolio-3.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-3.webp" class="img-fluid" alt="" loading="lazy"/>
                 <div class="portfolio-links">
                   <a
                     href="assets/portfolio/portfolio-3.webp"
@@ -602,7 +602,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
-                <img src="assets/portfolio/portfolio-4.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-4.webp" class="img-fluid" alt="" loading="lazy"/>
                 <div class="portfolio-links">
                   <a
                     href="assets/portfolio/portfolio-4.webp"
@@ -635,7 +635,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
               <div class="portfolio-wrap">
-                <img src="assets/portfolio/portfolio-5.webp" class="img-fluid" alt="" />
+                <img src="assets/portfolio/portfolio-5.webp" class="img-fluid" alt="" loading="lazy"/>
                 <div class="portfolio-links">
                   <a
                     href="assets/portfolio/portfolio-5.webp"
