--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"></noscript>
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css"></noscript>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/swiper@9.3.2/swiper-bundle.min.css" rel="stylesheet">
@@ -115,7 +115,7 @@
       id="hero"
       class="d-flex flex-column justify-content-between align-items-left container"
     >
-      <div class="hero-container justify-content-between align-items-center row" data-aos="fade-in">
+      <div class="hero-container justify-content-between align-items-center row">
         <div class="col-md-6">
           <p><span>Hi, my name is</span></p>
           <h1>Chai Shao Yang.</h1>
