--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
     />
 
+    <link rel="preload" as="image" href="/assets/programming.svg">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"></noscript>
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -138,7 +139,7 @@
         </div>
         <div class="col-md-6">
           <img
-            src="/assets/icons/undraw_programming_re_kg9v.svg"
+            src="/assets/programming.svg"
             alt=""
             class="img-fluid dim"
           />
