--- a/index.html
+++ b/index.html
@@ -343,6 +343,14 @@
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="achievements-title">Science & Math</h3>
               <div class="achievements-item">
+                <h4>International Elementz Fair</h4>
+                <h5>2025</h5>
+                <p>Designed an integrated system with IoT sensors and AI to monitor and enhance plant growth.</p>
+                <ul>
+                  <li>Silver Award</li>
+                </ul>
+              </div>
+              <div class="achievements-item">
                 <h4>Singapore Young Physicists' Tournament</h4>
                 <h5>2025</h5>
                 <ul>
@@ -357,7 +365,7 @@
                 </ul>
               </div>
               <div class="achievements-item">
-                <h4>44th International CB Paul Science Quiz</h4>
+                <h4>44th CB Paul Science Quiz</h4>
                 <h5>2023</h5>
                 <p>
                   <em>Competed in both <span>Preliminary and Final rounds</span></em>
@@ -380,19 +388,6 @@
                 <ul>
                   <li>Individual Bronze Award</li>
                   <li>Team Bronze Award</li>
-                </ul>
-              </div>
-              <div class="achievements-item">
-                <h4>23rd International Elementz Science Research Conference & Exhibition</h4>
-                <h5>2022</h5>
-                <p>
-                  <em
-                    >Innovated on solutions to
-                    <span>reduce environmental implications of fast fashion</span></em
-                  >
-                </p>
-                <ul>
-                  <li>Bronze Award</li>
                 </ul>
               </div>
               <div class="achievements-item">
