--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             alt="chai shao yang"
             class="img-fluid rounded-circle"
           />
-          <h1 class="text-light"><a href="index.html">Chai Shao Yang</a></h1>
+          <h1 class="text-light"><a href="/">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center">
             <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
               ><i class="bx bx-envelope"></i
@@ -78,7 +78,7 @@
         </nav>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-3 navbar-custom" id="navbar">
           <div class="container">
-            <a href="index.html" class="navbar-brand">Chai Shao Yang</a>
+            <a href="/" class="navbar-brand">Chai Shao Yang</a>
 
             <div class="collapse navbar-collapse" id="navmenu">
               <ul class="navbar-nav ms-auto">
