--- a/index.html
+++ b/index.html
@@ -277,7 +277,14 @@
                   <li>2nd in Best Robot Performance</li>
                 </ul>
               </div>
-              <h3 class="achievements-title">Projects</h3>
+              <h3 class="achievements-title">Miscellaneous</h3>
+              <div class="achievements-item">
+                <h4>Singapore Youth Festival</h4>
+                <h5>2025</h5>
+                <ul>
+                  <li>Distinction (Strings)</li>
+                </ul>
+              </div>
               <div class="achievements-item">
                 <h4>Ngee Ann Polytechnic Social Innovation Hackathon</h4>
                 <h5>2022</h5>
@@ -342,6 +349,19 @@
             </div>
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="achievements-title">Science & Math</h3>
+              <div class="achievements-item">
+                <h4>International Mathematical Modelling Challenge</h4>
+                <h5>2025</h5>
+                <p>
+                  Developed a statistical approach towards scheduling matches for a 
+                  global sports league that balances competitive fairness, environmental
+                  sustainability and practicality.
+                </p>
+                <ul>
+                  <li>High Distinction (Singapore)</li>
+                  <li>Honourable Mention (International)</li>
+                </ul>
+              </div>
               <div class="achievements-item">
                 <h4>International Elementz Fair</h4>
                 <h5>2025</h5>
