--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             src="/assets/programming.svg"
             alt=""
             class="img-fluid dim"
+            fetchpriority="high"
           />
         </div>
       </div>
