--- a/index.html
+++ b/index.html
@@ -280,6 +280,13 @@
               </div>
               <h3 class="achievements-title">Miscellaneous</h3>
               <div class="achievements-item">
+                <h4>Nanyang Research Programme</h4>
+                <h5>2024 - 2025</h5>
+                <ul>
+                  <li>Gold Award</li>
+                </ul>
+              </div>
+              <div class="achievements-item">
                 <h4>Singapore Youth Festival</h4>
                 <h5>2025</h5>
                 <ul>
