--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                      <span>17</span>
+                      <span>18</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -505,32 +505,13 @@
                       data-src="assets/videos/chess.mp4"
                     ></video>
                     <p class="mt-3">
-                      Chess is one of my favourite passtimes as it helps me develop my problem
-                      solving abilities as well as my critical thinking. This is why I decided that
-                      I wanted to make a replica of the board game from scratch using python. This
-                      was my first big project that I endeavoured on at that point in time so the
-                      prospect of building the entire app ground up seemed overwhelming to me
-                      initially. Indeed, it was no easy task and my abilities were pushed to their
-                      limit in order for me to figure out solutions to all sorts of bugs that had
-                      arised along the way. In hindsight, there were certain aspects of my code that
-                      could receive some cleaning up as well as a few bugs that needed to be taken
-                      care of, but for the most part, the game is functional and I was glad that I
-                      did not give up midway as this journey has been very rewarding and fruitful.
+                      Chess game that was built using python/pygame. The project was built using
+                      object oriented programming, where the board and individual pieces were all defined
+                      through objects, with their unique attributes. The pieces also used inheritance
+                      and polymorphism for their methods. 
                     </p>
                   </div>
                   <a href="https://github.com/SYChai271/chess" target="_blank" title="More Details"
-                    ><i class="bx bx-link"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-              <div class="portfolio-wrap">
-                <img src="assets/portfolio/game.webp" class="img-fluid" alt="" />
-                <div class="portfolio-links">
-                  <a href="SY-RPG/SY-RPG.html" target="_blank"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/SYChai271/SY-RPG" target="_blank" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -555,9 +536,7 @@
                       This website was designed to showcase my groups's research and ideas for the
                       23rd Elementz Science Research Conference & Exhibition. In this project, I
                       applied many concepts which I had learnt such as building a responsive layout
-                      using bootstrap, as well as learning how to style images via CSS. This
-                      experience has been very fulfilling as I was able to upgrade my web
-                      development skills while at the same time playing my part for the team.
+                      using bootstrap, as well as learning how to style images via CSS.
                     </p>
                   </div>
                   <a
@@ -568,56 +547,6 @@
                   ></a>
                   <a
                     href="https://github.com/SYChai271/avisfashion"
-                    target="_blank"
-                    title="More Details"
-                    ><i class="bx bx-link"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
-              <div class="portfolio-wrap">
-                <img src="assets/portfolio/portfolio-3.webp" class="img-fluid" alt="" />
-                <div class="portfolio-links">
-                  <a
-                    href="assets/portfolio/portfolio-3.webp"
-                    loading="lazy"
-                    data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"
-                    data-glightbox="title: NRC 2021; description: .robotics-desc1"
-                    data-desc-position="right"
-                    ><i class="bx bx-plus"></i
-                  ></a>
-                  <div class="glightbox-desc robotics-desc1">
-                    <video
-                      class="d-none d-lg-block"
-                      width="240" height="180"
-                      controls muted loop
-                      data-src="assets/videos/IMG_5516.MOV"
-                    ></video>
-                    <p class="mt-3">
-                      Due to the pandemic, I was unable to compete in any robotics competition in
-                      2020, which makes this the first robotics competition I took part in. Although
-                      I had received training and had attempted numerous practices, none of which
-                      was able to be compared with the scale and difficulty of the WRO missions.
-                      Needless to say, I had made uncountable mistakes during the preparation for
-                      this competition mainly due to my inexperience. For instance, rather than
-                      taking my time and brainstorming plausible solutions, I jumped straight into
-                      it with my initial idea which I was optimistic about, but after several weeks
-                      of testing, I realised that my prototype was not going to cut it. It was
-                      difficult to go back to square one and start over but I understood that it was
-                      necessary in order for me to have any hopes of improving. This competition
-                      taught me the importance of perserverance; to have the urge to continue
-                      despite mutliple setbacks which I had faced when the robot was performing
-                      inconsistently. It was only after countless hours of hardwork did I managed to
-                      overcome these difficulties. In terms of skills, I learnt many new algorithms
-                      like PID line tracing, various search and sort algorithms and even implemented
-                      depth first search to find the shortest path.
-                    </p>
-                  </div>
-                  <a
-                    href="https://github.com/SYChai271/sy-wro2021"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
@@ -645,14 +574,50 @@
                       attaining the 30by30 goal. Similar to the Avis Fashion website, this was also
                       made using bootstrap and vanilla CSS. Additionally, I was able to include some
                       javascript which I had learnt along the way to enhance the user experience of
-                      the website. This continued my interest for building websites and prompted me
-                      to learn more about back-end web development.
+                      the website.
                     </p>
                   </div>
                   <a href="https://30by30.netlify.app" class="text-decoration-none" target="_blank"
                     ><i class="bx bx-link-external"></i
                   ></a>
                   <a href="https://github.com/SYChai271/30by30" target="_blank" title="More Details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
+              <div class="portfolio-wrap">
+                <img src="assets/portfolio/portfolio-3.webp" class="img-fluid" alt="" />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/portfolio/portfolio-3.webp"
+                    loading="lazy"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    data-glightbox="title: NRC 2021; description: .robotics-desc1"
+                    data-desc-position="right"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <div class="glightbox-desc robotics-desc1">
+                    <video
+                      class="d-none d-lg-block"
+                      width="240" height="180"
+                      controls muted loop
+                      data-src="assets/videos/IMG_5516.MOV"
+                    ></video>
+                    <p class="mt-3">
+                      The 2021 mission mainly involved collecting and depositing randomly arranged cars
+                      at respective locations while avoiding obsatles like barriers. I learnt various
+                      sorting and searching algorithms to optimise the collection of cars and
+                      implemented graph traversal algorithms to determine the shortest path to take.
+                    </p>
+                  </div>
+                  <a
+                    href="https://github.com/SYChai271/sy-wro2021"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -680,27 +645,45 @@
                       data-src="assets/videos/IMG_5517.MOV"
                     ></video>
                     <p class="mt-3">
-                      The 2022 mission was radically different from that of 2021. There were many
-                      more elements demanding greater expertise in the engineering of robot to
-                      enable to it cross obstacles and perform precise actions. Compared to the
-                      previous year, the tasks this year were more challenging in terms of building.
-                      Upon realising this, I could not help but feel slightly nervous as my building
-                      was not as well-rounded as my programming. Nonetheless, I felt that this was a
-                      good opportunity to step out of my comfort zone and try out something new and
-                      build innovative mechanisms and experiment with different robot bases.
-                      Designing a good robot is a multifaceted process that requires understanding
-                      in various physics topics such as centre of gravity as well as the principles
-                      of moments to enable the robot to perform the tasks with ease, which I felt
-                      that I had accomplished. In terms of programming, I was able to design an
-                      algorithm to allow the robot to sense objects accurately while moving at high
-                      speeds to save time. This led me employ statstics functions like mean and
-                      median as well as standard deviation to calculate the optimal sensor reading
-                      for evaluation to yield the most reliable results. Furthermore, there were
-                      other creative ideas I tried such as using the PID algorithm to control the
-                      distance of the robot from the wall rather than for line tracing as there was
-                      a lack of lines on the playing field. This method turned out to be very
-                      feasible as it was efficacious in maintaining the consistency and positioning
-                      of the robot.
+                      The 2022 mission involved crossing obstacles as well as detecting various types of objects. 
+                      To do so, the robot base was redesigned to be optimal for crossing, and we improved the 
+                      sensing algorithm to allow the robot to continue moving while sensing, saving time.  
+                    </p>
+                  </div>
+                  <a
+                    href="https://github.com/SYChai271/sy-wro2022"
+                    target="_blank"
+                    title="More Details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-robotics">
+              <div class="portfolio-wrap">
+                <img src="assets/portfolio/portfolio-6.webp" class="img-fluid" alt="" />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/portfolio/portfolio-6.webp"
+                    loading="lazy"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    data-glightbox="title: WRO 2024; description: .robotics-desc3"
+                    data-desc-position="right"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <div class="glightbox-desc robotics-desc3">
+                    <video
+                      class="d-none d-lg-block"
+                      width="240" height="180"
+                      controls muted loop
+                      data-src="assets/videos/IMG_7673.mov"
+                    ></video>
+                    <p class="mt-3">
+                      The 2024 senior mission involved collecting and stacking house objects, as well as sorting them 
+                      by colour. It also required crossing obstacles to collect some of the houses. We further improved
+                      our robot base from 2022 to make the robot slimmer while also making the crossing more consistent.
                     </p>
                   </div>
                   <a
