--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                   >
                 </p>
                 <ul>
-                  <li>2nd Place Overall</li>
+                  <li>2nd Place</li>
                 </ul>
               </div>
               <div class="achievements-item">
@@ -327,7 +327,7 @@
                   >
                 </p>
                 <ul>
-                  <li>2nd Place Overall</li>
+                  <li>2nd Place</li>
                 </ul>
               </div>
               <h3 class="achievements-title">School Awards</h3>
@@ -357,6 +357,13 @@
             </div>
             <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
               <h3 class="achievements-title">Science & Math</h3>
+              <div class="achievements-item">
+                <h4>Singapore Physics League</h4>
+                <h5>2025</h5>
+                <ul>
+                  <li>Silver Award</li>
+                </ul>
+              </div>
               <div class="achievements-item">
                 <h4>International Mathematical Modelling Challenge</h4>
                 <h5>2025</h5>
@@ -414,8 +421,7 @@
                 <h4>Singapore Junior Physics Olympiad</h4>
                 <h5>2023</h5>
                 <ul>
-                  <li>Individual Bronze Award</li>
-                  <li>Team Bronze Award</li>
+                  <li>Bronze Award</li>
                 </ul>
               </div>
               <div class="achievements-item">
