--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </ul>
               </div>
               <div class="achievements-item">
-                <h4>International Mathematical Modelling Challenge</h4>
+                <h4>International Mathematical Modeling Challenge</h4>
                 <h5>2025</h5>
                 <p>
                   Developed a statistical approach towards scheduling matches for a 
