--- a/index.html
+++ b/index.html
@@ -155,12 +155,9 @@
           <div class="section-title">
             <h2>About</h2>
             <p>
-              Hi, my name is Shao Yang. As an <span>eager learner</span>, I hope to expand my
-              knowledge especially in the field of <span>Math and Science</span>. I am a person of
-              tenacity, striving for constant self-improvement by embracing challenges that come my
-              way, espcially in the field of Artificial Intelligence and robotics. I am innovative
-              and can come up with
-              <span>effective solutions to address new problems that may arise</span>.
+              Hi, my name is Shao Yang and I hope to expand my knowledge in <span>Math and Science</span>.
+              I am a person of tenacity, striving for constant self-improvement by embracing challenges that
+              come my way, espcially in the field of Artificial Intelligence and robotics.
             </p>
           </div>
 
@@ -236,8 +233,7 @@
           <div class="section-title">
             <h2>Achievements</h2>
             <p>
-              My experiences from taking part in a myriad of competitions have been invaluable and I
-              was able to learn and improve on my weaknesses every time.
+              Beyond academics, I further my interest in STEM by participating in olympiads and competitions to hone my skills.
             </p>
           </div>
 
