--- a/index.html
+++ b/index.html
@@ -293,16 +293,8 @@
                 <h4>Ngee Ann Polytechnic Social Innovation Hackathon</h4>
                 <h5>2022</h5>
                 <p>
-                  <em
-                    >We had to <span>ideate and develop solutions to social issues</span>. Our idea
-                    was to create a game to
-                    <span
-                      >gamify home gardening to encourage more people to partake in this
-                      activity</span
-                    >. In the process, users will gain credits which can be used to support local
-                    produce. This in turn <span>boosts the local food industry</span> which is a
-                    step closer to reaching the 30 by 30 goal.</em
-                  >
+                  <em>We created an application to gamify home gardening to support the 30 by 30
+                  goal as part of the Singapore Green Plan.</em>
                 </p>
                 <ul>
                   <li>2nd Place</li>
@@ -312,15 +304,9 @@
                 <h4>Young Technopreneur Challenge</h4>
                 <h5>2022</h5>
                 <p>
-                  <em
-                    >The Young Technopreneur Challenge, sponsored by HP Inc. and supported by South
-                    West Community Development Council (CDC), aims to support students to
-                    <span
-                      >take ownership of the world they live in and actively develop solutions</span
-                    >
-                    to the UN Sustainable Development Goals, Singapore Green Plan 2030 and
-                    Sustainable South West Masterplan.</em
-                  >
+                  <em>The Young Technopreneur Challenge aims to support students to actively develop
+                  solutions to the UN Sustainable Development Goals, Singapore Green Plan 2030 and
+                  Sustainable South West Masterplan.</em>
                 </p>
                 <ul>
                   <li>2nd Place</li>
@@ -328,8 +314,17 @@
               </div>
               <h3 class="achievements-title">School Awards</h3>
               <div class="achievements-item">
+                <h4>Honours Day</h4>
+                <h5>2025</h5>
+                <ul>
+                  <li>Principal's Honour Roll</li>
+                  <li>Outstanding Service (STEM Council)</li>
+                  <li>Service (String Ensemble)</li>
+                </ul>
+              </div>
+              <div class="achievements-item">
                 <h4>Founder's Day</h4>
-                <h5>2024</h5>
+                <h5>2025</h5>
                 <ul>
                   <li>Wan Fook Weng Award (Top in Cohort)</li>
                   <li>Wong Ah Loong Science Scholarship</li>
@@ -339,7 +334,7 @@
               </div>
               <div class="achievements-item">
                 <h4>Awards Day</h4>
-                <h5>2022</h5>
+                <h5>2023</h5>
                 <ul>
                   <li>3rd in level</li>
                   <li>1st in class</li>
@@ -364,9 +359,9 @@
                 <h4>International Mathematical Modeling Challenge</h4>
                 <h5>2025</h5>
                 <p>
-                  Developed a statistical approach towards scheduling matches for a 
+                  <em>Developed a statistical approach towards scheduling matches for a 
                   global sports league that balances competitive fairness, environmental
-                  sustainability and practicality.
+                  sustainability and practicality.</em>
                 </p>
                 <ul>
                   <li>High Distinction (Singapore)</li>
@@ -376,7 +371,7 @@
               <div class="achievements-item">
                 <h4>International Elementz Fair</h4>
                 <h5>2025</h5>
-                <p>Designed an integrated system with IoT sensors and AI to monitor and enhance plant growth.</p>
+                <p><em>Designed an integrated system with IoT sensors and AI to monitor and enhance plant growth.</em></p>
                 <ul>
                   <li>Silver Award</li>
                 </ul>
@@ -399,7 +394,7 @@
                 <h4>44th CB Paul Science Quiz</h4>
                 <h5>2023</h5>
                 <p>
-                  <em>Competed in both <span>Preliminary and Final rounds</span></em>
+                  <em>Competed in both Preliminary and Final rounds</em>
                 </p>
                 <ul>
                   <li>Individual Gold Award</li>
