--- a/SY-RPG/SY-RPG.html
+++ b/SY-RPG/SY-RPG.html
@@ -111,7 +111,7 @@ body {
 
 		<script src="SY-RPG.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"SY-RPG","experimentalVK":false,"fileSizes":{"SY-RPG.pck":906016,"SY-RPG.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"SY-RPG","experimentalVK":false,"fileSizes":{"SY-RPG.pck":905964,"SY-RPG.wasm":36145869},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
