--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <p>
               Hi, my name is Shao Yang and I hope to expand my knowledge in <span>Math and Science</span>.
               I am a person of tenacity, striving for constant self-improvement by embracing challenges that
-              come my way, espcially in the field of Artificial Intelligence and robotics.
+              come my way, especially in the field of Artificial Intelligence and robotics.
             </p>
           </div>
 
