--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Shao Yang's Portfolio</title>
-
     <link href="assets/icon.png" rel="icon" />
     <link href="assets/icon.png" rel="apple-touch-icon" />
 
-    <link rel="preload" as="image" href="/assets/programming.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet" />
+    <link rel="preload" as="image" href="/assets/programming.svg">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"></noscript>
+
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css"></noscript>
+
+    <style>body{opacity:0;transition:opacity .18s ease-in}</style>
+    <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet';document.body.style.opacity='1'">
+    <noscript><link rel="stylesheet" href="style.css"></noscript>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap" rel="stylesheet" />
 
@@ -23,6 +31,16 @@
     <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/css/glightbox.min.css"></noscript>
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/swiper@9.3.2/swiper-bundle.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link href="https://cdn.jsdelivr.net/npm/swiper@9.3.2/swiper-bundle.min.css" rel="stylesheet"></noscript>
+
+    <style>
+      html,body{height:100%;}
+      body{background:#070a13;color:#8892b0;font-family:'Open Sans',sans-serif;margin:0}
+      #hero{width:100%;height:100vh;background-size:cover}
+      #hero .hero-container{margin-left:5vw;margin-top:12vw;position:relative;z-index:2;min-width:300px}
+      #hero h1{margin:0 0 15px 0;font-size:64px;font-weight:700;line-height:56px;color:#CCD6F6}
+      #hero h2{margin:0 0 30px 0;font-size:60px;font-weight:700;line-height:56px;color:#8892B0}
+      #header{background:#040b14}
+    </style>
   </head>
 
   <body>
@@ -37,6 +55,10 @@
             src="assets/chai_shao_yang.webp"
             alt="chai shao yang"
             class="img-fluid rounded-circle"
+            width="120"
+            height="120"
+            loading="lazy"
+            decoding="async"
           />
           <h1 class="text-light"><a href="#">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center">
@@ -142,6 +164,10 @@
             alt=""
             class="img-fluid dim"
             fetchpriority="high"
+            width="800"
+            height="600"
+            loading="eager"
+            decoding="async"
           />
         </div>
       </div>
@@ -167,6 +193,10 @@
                 src="assets/chai_shao_yang.webp"
                 class="img-fluid dim"
                 alt="chai shao yang"
+                width="360"
+                height="360"
+                loading="lazy"
+                decoding="async"
               />
             </div>
             <div class="col-md-8 pt-4 pt-md-0 content" data-aos="fade-left">
