--- a/index.html
+++ b/index.html
@@ -33,13 +33,45 @@
     <noscript><link href="https://cdn.jsdelivr.net/npm/swiper@9.3.2/swiper-bundle.min.css" rel="stylesheet"></noscript>
 
     <style>
-      html,body{height:100%;}
+      html,body{height:100%}
       body{background:#070a13;color:#8892b0;font-family:'Open Sans',sans-serif;margin:0}
+      #header{background:#040b14}
+      .navbar-custom{background:#040b14}
+      .navbar-brand{color:#CCD6F6}
+      .mobile-nav-toggle{color:#A1B3EE}
+      .profile .social-links a,.social-links a{background:#212431;color:#CCD6F6;border-radius:50%;display:inline-block;text-align:center}
+
       #hero{width:100%;height:100vh;background-size:cover}
+      #hero:before{content:"";background:rgba(5,13,24,0.3);position:absolute;bottom:0;top:0;left:0;right:0;z-index:1}
       #hero .hero-container{margin-left:5vw;margin-top:12vw;position:relative;z-index:2;min-width:300px}
       #hero h1{margin:0 0 15px 0;font-size:64px;font-weight:700;line-height:56px;color:#CCD6F6}
       #hero h2{margin:0 0 30px 0;font-size:60px;font-weight:700;line-height:56px;color:#8892B0}
-      #header{background:#040b14}
+      #hero p{color:#8892B0;margin-bottom:30px;font-size:18px;font-family:'Poppins',sans-serif;max-width:30vw}
+      #hero p span{color:#A1B3EE}
+
+      .btn-resume{background:#CCD6F6;color:#212431;padding:10px 20px;border-radius:30px;border:none;font-weight:600;display:inline-flex;align-items:center;gap:8px}
+      img{max-width:100%;height:auto;display:block}
+      .container{padding-left:30px;padding-right:30px}
+
+      @media (max-width: 991px) {
+        #header{position:fixed;top:7vh;left:0;bottom:0;width:300px;padding:0 15px;background:#040b14;overflow-y:auto;z-index:9997}
+        #header .profile img{margin:15px auto;display:block;width:120px;border:8px solid #2c2f3f}
+        #header .profile h1{font-size:24px;margin:0;padding:0;font-weight:600;text-align-last:center;font-family:'Poppins',sans-serif}
+        #header .profile .social-links a{font-size:18px;display:inline-block;background:#212431;color:#CCD6F6;line-height:1;padding:8px 0;margin-right:4px;border-radius:50%;width:36px;height:36px}
+
+        #header{left:-300px}
+        #main{margin-left:0}
+        .container,.container-fluid{padding-left:12px;padding-right:12px}
+        .navbar-brand{color:#CCD6F6;z-index:9996}
+
+        .nav-menu{padding:30px 0 0 0}
+        .mobile-nav-toggle{position:fixed;right:15px;top:15px;z-index:9998;border:0;font-size:24px;transition:all .4s;outline:none;color:#A1B3EE;width:40px;height:40px;display:inline-flex;align-items:center;justify-content:center;border-radius:50px}
+
+        #hero{padding-top:10vh}
+        #hero h1{font-size:40px;line-height:36px}
+        #hero h2{font-size:38px;line-height:35px;margin-bottom:20px}
+        #hero p{font-size:16px;line-height:24px;margin-bottom:20px;max-width:fit-content}
+      }
     </style>
   </head>
 
