--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         #hero h2{font-size:38px;line-height:35px;margin-bottom:20px}
         #hero p{font-size:16px;line-height:24px;margin-bottom:20px;max-width:fit-content}
       }
+      @media (max-height: 500px) {
+        #hero {padding-top: 0;}
+      }
     </style>
   </head>
 
