--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           />
           <h1 class="text-light"><a href="#">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
+            <a href="mailto:shaoyangchai1@gmail.com" target="_blank" class="email"
               ><i class="bx bx-envelope"></i
             ></a>
             <a href="https://www.instagram.com/sy.chai_/" target="_blank" class="instagram"
               ><i class="bx bxl-instagram"></i
             ></a>
-            <a href="https://github.com/SYChai271" target="_blank" class="github"
+            <a href="https://github.com/SY-Chai" target="_blank" class="github"
               ><i class="bx bxl-github"></i
             ></a>
           </div>
@@ -183,13 +183,13 @@
             <span>real-world problems</span>.
           </p>
           <div class="social-links mt-3 d-none d-lg-block">
-            <a href="mailto:sychai271@gmail.com" target="_blank" class="email"
+            <a href="mailto:shaoyangchai@gmail.com" target="_blank" class="email"
               ><i class="bx bx-envelope"></i
             ></a>
             <a href="https://www.instagram.com/sy.chai_/" target="_blank" class="instagram"
               ><i class="bx bxl-instagram"></i
             ></a>
-            <a href="https://github.com/SYChai271" target="_blank" class="github"
+            <a href="https://github.com/SY-Chai" target="_blank" class="github"
               ><i class="bx bxl-github"></i
             ></a>
           </div>
@@ -254,7 +254,7 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Email:</strong>
-                      <span><!--email_off-->sychai271@gmail.com<!--/email_off--></span>
+                      <span><!--email_off-->shaoyangchai@gmail.com<!--/email_off--></span>
                     </li>
                   </ul>
                 </div>
@@ -566,7 +566,7 @@
                       and polymorphism for their methods. 
                     </p>
                   </div>
-                  <a href="https://github.com/SYChai271/chess" target="_blank" title="More Details"
+                  <a href="https://github.com/SY-Chai/chess" target="_blank" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -601,7 +601,7 @@
                     ><i class="bx bx-link-external"></i
                   ></a>
                   <a
-                    href="https://github.com/SYChai271/avisfashion"
+                    href="https://github.com/SY-Chai/avisfashion"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
@@ -635,7 +635,7 @@
                   <a href="https://30by30.netlify.app" class="text-decoration-none" target="_blank"
                     ><i class="bx bx-link-external"></i
                   ></a>
-                  <a href="https://github.com/SYChai271/30by30" target="_blank" title="More Details"
+                  <a href="https://github.com/SY-Chai/30by30" target="_blank" title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -670,7 +670,7 @@
                     </p>
                   </div>
                   <a
-                    href="https://github.com/SYChai271/sy-wro2021"
+                    href="https://github.com/SY-Chai/sy-wro2021"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
@@ -706,7 +706,7 @@
                     </p>
                   </div>
                   <a
-                    href="https://github.com/SYChai271/sy-wro2022"
+                    href="https://github.com/SY-Chai/sy-wro2022"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
@@ -742,7 +742,7 @@
                     </p>
                   </div>
                   <a
-                    href="https://github.com/SYChai271/sy-wro2022"
+                    href="https://github.com/SY-Chai/sy-wro2022"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
