--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                     </p>
                   </div>
                   <a
-                    href="https://github.com/SY-Chai/sy-wro2022"
+                    href="https://github.com/SY-Chai/wro2024"
                     target="_blank"
                     title="More Details"
                     ><i class="bx bx-link"></i
