removed duplicate css

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           />
           <h1 class="text-light"><a href="#">Chai Shao Yang</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="mailto:shaoyangchai1@gmail.com" target="_blank" class="email"
+            <a href="mailto:shaoyangchai@gmail.com" target="_blank" class="email"
               ><i class="bx bx-envelope"></i
             ></a>
             <a href="https://www.instagram.com/sy.chai_/" target="_blank" class="instagram"
@@ -267,8 +267,8 @@
                 programming and engineering, joining the
                 <span>Engineering & Tech Programme Scholarship</span> as well as becoming
                 <span>Vice-President of my STEM CCA</span>. I also took part in the
-                <span>Nanyang Research Programme</span>, where I utlised ML to model plant growth
-                based on environemntal data collected by IoT sensors. My interest in Competitive
+                <span>Nanyang Research Programme</span>, where I utililsed ML to model plant growth
+                based on environmental data collected by IoT sensors. My interest in Competitive
                 Robotics continued, allowing me to clinch a second national title in Robotics and
                 even <span>represent Singapore at the International Final in Türkiye</span>.
               </p>
@@ -316,7 +316,7 @@
                 <h4>World Robot Olympiad International Final</h4>
                 <h5>2024</h5>
                 <p>
-                  <em>Represented Singapore at Interntional Final in Izmir, Türkiye</em>
+                  <em>Represented Singapore at International Final in Izmir, Türkiye</em>
                 </p>
                 <ul>
                   <li>Top 30 Placing Robomission Senior</li>
@@ -484,7 +484,6 @@
               <div class="achievements-item">
                 <h4>Singapore and Asian schools Math Olympiad</h4>
                 <h5>2022</h5>
-                <p><em></em></p>
                 <ul>
                   <li>Bronze Award</li>
                 </ul>
@@ -587,7 +586,7 @@
                   ></a>
                   <div class="glightbox-desc web-desc1">
                     <p>
-                      This was my first web developemnet project after learning the fundamentals.
+                      This was my first web development project after learning the fundamentals.
                       This website was designed to showcase my groups's research and ideas for the
                       23rd Elementz Science Research Conference & Exhibition. In this project, I
                       applied many concepts which I had learnt such as building a responsive layout
@@ -664,7 +663,7 @@
                     ></video>
                     <p class="mt-3">
                       The 2021 mission mainly involved collecting and depositing randomly arranged cars
-                      at respective locations while avoiding obsatles like barriers. I learnt various
+                      at respective locations while avoiding obstacles like barriers. I learnt various
                       sorting and searching algorithms to optimise the collection of cars and
                       implemented graph traversal algorithms to determine the shortest path to take.
                     </p>
