--- a/index.html
+++ b/index.html
@@ -251,6 +251,18 @@
             <div class="col-md-6" data-aos="fade-up">
               <h3 class="achievements-title">Computing & Robotics</h3>
               <div class="achievements-item">
+                <h4>Hack&Roll</h4>
+                <h5>2026</h5>
+                <p>
+                  <em>We built Rewind, an immersive 3D web application that allows users to explore the rich history of Singapore through 
+                  an interactive virtual environment. By combining modern web technologies, AI-powered storytelling, and archival data,
+                  we bring the past to life.</em>
+                </p>
+                <ul>
+                  <li>Top 9 Placing</li>
+                </ul>
+              </div>
+              <div class="achievements-item">
                 <h4>National Olympiad in Informatics</h4>
                 <h5>2025</h5>
                 <ul>
@@ -265,21 +277,15 @@
                 </ul>
               </div>
               <div class="achievements-item">
-                <h4>World Robot Olympiad International Final</h4>
+                <h4>World Robot Olympiad</h4>
                 <h5>2024</h5>
                 <p>
                   <em>Represented Singapore at International Final in Izmir, Türkiye</em>
                 </p>
                 <ul>
-                  <li>Top 30 Placing Robomission Senior</li>
-                </ul>
-              </div>
-              <div class="achievements-item">
-                <h4>World Robot Olympiad Singapore</h4>
-                <h5>2024</h5>
-                <ul>
-                  <li>Robomission Senior Champion</li>
-                  <li>Coder Award</li>
+                  <li>Top 30 Placing Robomission Senior (International)</li>
+                  <li>Robomission Senior Champion (Singapore)</li>
+                  <li>Coder Award (Singapore)</li>
                 </ul>
               </div>
               <div class="achievements-item">
