--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             decoding="async"
           />
           <h1 class="header__name"><a href="#">Chai Shao Yang</a></h1>
-          <div class="social-links header__social header__social--centered">
+          <div class="social-links header__social">
             <a href="mailto:shaoyangchai@gmail.com" target="_blank" class="email"
               ><i class="bx bx-envelope"></i
             ></a>
